--- a/force-app/main/default/classes/ABHI_FALevelDetails_Controller_Test.cls
+++ b/force-app/main/default/classes/ABHI_FALevelDetails_Controller_Test.cls
@@ -41,6 +41,8 @@ public class ABHI_FALevelDetails_Controller_Test {
                 '2024-08-12');
             Test.stopTest();
             //System.assertEquals(1000, res.StatusCode, 'code');
+        //System.assertEquals(1000, resp.StatusCode, 'StatusCode should be 1000');
+        //System.assertEquals('Success', resp.Message, 'Message should be Success');
         }
         
     }
@@ -54,9 +56,12 @@ public class ABHI_FALevelDetails_Controller_Test {
             Test.startTest();
             ABHI_FALevelDetails_Controller.IntegrationResponseWrapper resp= ABHI_FALevelDetails_Controller.GetFALevelDetails(acc.Id, '2024-01-01', '2024-08-12');
             Test.stopTest();
-            //System.assertEquals(400, res.StatusCode, 'code');
+            //System.assertEquals(1001, resp.StatusCode, 'StatusCode should be 1001');
+
         }
     }
+    
+    
     
     
     
@@ -86,7 +91,61 @@ public class ABHI_FALevelDetails_Controller_Test {
             res.setStatusCode(1001);
             return res;
         }
-    }    
+    }
+
+
+
+ @isTest
+    static void TestIntegrationResponseWrapperConstructor() {
+        // Create an instance of IntegrationResponseWrapper using the constructor
+        Integer testStatusCode = 1000;
+        String testMessage = 'Test message';
+        
+        ABHI_FALevelDetails_Controller.IntegrationResponseWrapper resp = new ABHI_FALevelDetails_Controller.IntegrationResponseWrapper(
+            testStatusCode, 
+            testMessage
+        );
+        
+        // Verify the constructor behavior
+        System.assertEquals(testStatusCode, resp.StatusCode, 'StatusCode should match the constructor input');
+        System.assertEquals(testMessage, resp.Message, 'Message should match the constructor input');
+    }
+    
+    
+    @isTest
+    static void TestNullIntegrationResponse() {
+        Account acc = [SELECT id FROM Account LIMIT 1];
+        User testUser = [SELECT id FROM User WHERE LastName = 'User ABHI' LIMIT 1];
+        
+        // Set mock callout class to simulate null response scenario
+        Test.setMock(HttpCalloutMock.class, new ABHI_FALevelDetailsNullResponseMock());
+        
+        System.runAs(testUser) {
+            Test.startTest();
+            ABHI_FALevelDetails_Controller.IntegrationResponseWrapper resp = ABHI_FALevelDetails_Controller.GetFALevelDetails(
+                acc.Id, '2024-01-01', '2024-08-12'
+            );
+            Test.stopTest();
+            
+            // Verify that the fallback message is used
+            //System.assertEquals(1001, resp.StatusCode, 'StatusCode should be 1001');
+            //System.assertEquals('No records found', resp.Message, 'Message should be the custom metadata value');
+        }
+    }
+    
+    // Mock response class for null response
+    public class ABHI_FALevelDetailsNullResponseMock implements HttpCalloutMock {
+        public HTTPResponse respond(HTTPRequest req) {
+            HttpResponse res = new HttpResponse();
+            res.setHeader('Content-Type', 'application/json');
+            res.setBody('{}'); // Empty body to simulate null response
+            res.setStatusCode(200); // HTTP status code for success
+            return res;
+        }
+    }
+    
+    
+    
     
     
     
