--- a/force-app/main/default/classes/ABCL_IntegrationCallout.cls
+++ b/force-app/main/default/classes/ABCL_IntegrationCallout.cls
@@ -36,10 +36,9 @@ public with sharing class ABCL_IntegrationCallout {
         //Build HttpRequest
         request.setMethod(integrationMdt.Protocol__c);
         request.setEndPoint(endPointURL);
-        // removing it for now, will add it in next merge
-        /*if(integrationMdt.Timeout__c != null){
+        if(integrationMdt.Timeout__c != null){
             request.setTimeout(Integer.valueof(integrationMdt.Timeout__c));
-        }*/
+        }
 
         //Check for Payload
         if(!String.isBlank(payload)){
