--- a/force-app/main/default/classes/ASF_CaseFrameworkValidator.cls
+++ b/force-app/main/default/classes/ASF_CaseFrameworkValidator.cls
@@ -168,8 +168,9 @@ public with sharing class ASF_CaseFrameworkValidator {
         Set<String> caseStages = new Set<String>();
         Map<Id, Set<String>> skipperFlagMap = ASF_CaseTriggerModularHelper.getSkipperFlagMap();
         for(Case caseRec : currentCases){
+            Id skipperMapKey = ASF_CaseTriggerModularHelper.relObjName == '' ? caseRec.Id : (Id)caseRec.get(ASF_CaseTriggerModularHelper.relObjName);
             system.debug('validateChecklists--'+skipperFlagMap.get(caseRec.Id));
-            if(skipperFlagMap.containsKey(caseRec.Id) && skipperFlagMap.get(caseRec.Id).contains(ASF_Constants.SKIP_VALIDATE_CHECKLISTS)){
+            if(skipperFlagMap.containsKey(skipperMapKey) && skipperFlagMap.get(skipperMapKey).contains(ASF_Constants.SKIP_VALIDATE_CHECKLISTS)){
                 caseIdToReturnFlagMap.put(caseRec.Id, true);
             }else{
                 caseIds.add(caseRec.Id);
@@ -212,7 +213,8 @@ public with sharing class ASF_CaseFrameworkValidator {
         Map<Id, List<ASF_Case_Rule__c>> caseIdToCaseRulesForCurrentStage = new Map<Id, List<ASF_Case_Rule__c>>();
         Map<Id, Set<String>> skipperFlagMap = ASF_CaseTriggerModularHelper.getSkipperFlagMap();
         for(Case caseRec : currentCases){
-            if(!(skipperFlagMap.containsKey(caseRec.Id) && skipperFlagMap.get(caseRec.Id).contains(ASF_Constants.SKIP_VALIDATION_CHECKS))){
+            Id skipperMapKey = ASF_CaseTriggerModularHelper.relObjName == '' ? caseRec.Id : (Id)caseRec.get(ASF_CaseTriggerModularHelper.relObjName);
+            if(!(skipperFlagMap.containsKey(skipperMapKey) && skipperFlagMap.get(skipperMapKey).contains(ASF_Constants.SKIP_VALIDATION_CHECKS))){
          		cccExternalIds.add(caseRec.CCC_External_Id__c);
             }            
         }
@@ -256,8 +258,9 @@ public with sharing class ASF_CaseFrameworkValidator {
         Set<String> caseStages = new Set<String>();
         Map<Id, Set<String>> skipperFlagMap = ASF_CaseTriggerModularHelper.getSkipperFlagMap();
         for(Case caseRec : currentCases){
+            Id skipperMapKey = ASF_CaseTriggerModularHelper.relObjName == '' ? caseRec.Id : (Id)caseRec.get(ASF_CaseTriggerModularHelper.relObjName);
             system.debug('validate tasks--'+skipperFlagMap.get(caseRec.Id));
-            if(skipperFlagMap.containsKey(caseRec.Id) && skipperFlagMap.get(caseRec.Id).contains(ASF_Constants.SKIP_VALIDATE_TASKS)){
+            if(skipperFlagMap.containsKey(skipperMapKey) && skipperFlagMap.get(skipperMapKey).contains(ASF_Constants.SKIP_VALIDATE_TASKS)){
                 caseIdToReturnFlagMap.put(caseRec.Id, true);
             }else{
                 caseIds.add(caseRec.Id);
@@ -388,7 +391,9 @@ public with sharing class ASF_CaseFrameworkValidator {
         Set<String> caseStages = new Set<String>();
         Map<Id, Set<String>> skipperFlagMap = ASF_CaseTriggerModularHelper.getSkipperFlagMap();
         for(Case caseRec : currentCases){
-            if(skipperFlagMap.containsKey(caseRec.Id) && skipperFlagMap.get(caseRec.Id).contains(ASF_Constants.SKIP_APPROVAL_CHECKS)){
+            Id skipperMapKey = ASF_CaseTriggerModularHelper.relObjName == '' ? caseRec.Id : (Id)caseRec.get(ASF_CaseTriggerModularHelper.relObjName);
+            system.debug('set skipperFlagMap--'+skipperMapKey+'--'+skipperFlagMap);
+            if(skipperFlagMap.containsKey(skipperMapKey) && skipperFlagMap.get(skipperMapKey).contains(ASF_Constants.SKIP_APPROVAL_CHECKS)){
                 caseIdToReturnFlagMap.put(caseRec.Id, true);
             }else{
                 caseIds.add(caseRec.Id);
