ABSLAMC | RS1 | PR1030924-46 | Updated logic to populate source and channel fields on case

--- a/force-app/main/default/classes/ASF_CreateCaseWithTypeController.cls
+++ b/force-app/main/default/classes/ASF_CreateCaseWithTypeController.cls
@@ -17,6 +17,7 @@ public with sharing class ASF_CreateCaseWithTypeController {
     * @return  CaseDetailsWrapper
     *****************************************************************************************************************/
     
+    @AuraEnabled(Cacheable = true)
     public static CaseDetailsWrapper getUserDetails(){
 
         String source = '';
