PR970457-2176_ABHFL_PreClosureStageApex_Update

--- a/force-app/main/default/classes/ABHFL_PreClosureStageApex.cls
+++ b/force-app/main/default/classes/ABHFL_PreClosureStageApex.cls
@@ -39,6 +39,32 @@ public with sharing class ABHFL_PreClosureStageApex implements ASF_CaseStageClas
             assignCaseToAOMROMResults = ABHFL_CTSTHelper.assignCaseToAOMROM(assignCaseToAOMROMCases);
         }
 
+        /* added condition For the source of funds if Auction/Settlement or Mature/Loan Cancellation - checklist TAB should not be mandatory.
+        Jira id-PR970457-2176
+        Added By Ey-Nikhil  */
+        Set<Id> caseIds = new Set<Id>();
+        for (Case caseRec : caseRecords) {
+            caseIds.add(caseRec.Id);
+        }
+
+        List<ASF_Checklist__c> getIncompleteCaseChecklists = [
+            SELECT Id, Case__c, Mandatory__c, Stage_Name__c, Type__c, Status__c
+            FROM ASF_Checklist__c
+            WHERE 
+            Status__c NOT IN ('Completed', 'Rejected')
+            AND Case__c IN :caseIds
+        ]; 
+
+        Map<Id, List<ASF_Checklist__c>> checklistMap = new Map<Id, List<ASF_Checklist__c>>();
+        for (ASF_Checklist__c checklist : getIncompleteCaseChecklists) {
+            if (!checklistMap.containsKey(checklist.Case__c)) {
+                checklistMap.put(checklist.Case__c, new List<ASF_Checklist__c>());
+            }
+            checklistMap.get(checklist.Case__c).add(checklist);
+        }
+        /* added condition For the source of funds if Auction/Settlement or Mature/Loan Cancellation - checklist TAB should not be mandatory.
+        Jira id-PR970457-2176
+        Added By Ey-Nikhil  */
         for(Case caseRec : caseRecords){
             ASF_CaseMovementHelper.CaseStageValidationWrapper retCls = returnWrapper.get(caseRec.Id);
             if(assignCaseToPreferredBranchResults.containsKey(caseRec.Id)){
@@ -49,10 +75,23 @@ public with sharing class ABHFL_PreClosureStageApex implements ASF_CaseStageClas
                 retCls.updatedCase = assignCaseToAOMROMResults.get(caseRec.Id);
                 retCls.isCaseUpdated = true;
             }
+            //End By EY-Nikhil 
+            if (checklistMap.containsKey(caseRec.Id)) {
+                if(caseRec.CCC_External_Id__c == 'hfl060' && 
+                   caseRec.ABHFL_Case_Detail__r.Source_of_Funds__c != 'Mature' && 
+                   caseRec.ABHFL_Case_Detail__r.Source_of_Funds__c != 'Loan cancellation' && 
+                   caseRec.ABHFL_Case_Detail__r.Source_of_Funds__c != 'Settlement/Auction'){
+                       retCls.status = ABHFL_Constants.ERROR;
+                       retCls.errorMessage = System.Label.Incomplete_Checklist_Error_Message;
+                       retCls.isCaseUpdated=false;
+                   }
+            }
+            // End Nikhil
             returnWrapper.put(caseRec.Id, retCls);
         }
         return returnWrapper;
     }
+    
      public static Map<Id, ASF_CaseMovementHelper.CaseStageValidationWrapper> afterStageMovement(List<Case> caseRecords){
         Map<Id, ASF_CaseMovementHelper.CaseStageValidationWrapper> returnWrapper = new Map<Id, ASF_CaseMovementHelper.CaseStageValidationWrapper>();
         List<Case> eligibleCases = new List<Case>();
