--- a/force-app/main/default/classes/ABSLI_CreateCaseValidations_Test.cls
+++ b/force-app/main/default/classes/ABSLI_CreateCaseValidations_Test.cls
@@ -21,7 +21,7 @@ public class ABSLI_CreateCaseValidations_Test {
         Asset assetRec = ASF_TestDataFactory.createAsset(accRec.Id, 'Loans');
         assetRec.Policy_No__c = '1234';
         assetRec.Effective_Date__c = Date.today();
-        assetRec.Issue_Date__c = Date.today();
+        assetRec.Issue_Date__c = Date.today().addYears(-2);
         assetRec.Business_Unit__c = ABSLI_Constants.BUSINESS_UNIT;
         assetRec.Plan_Name__c = 'BSLI Saral Health FAV';
         assetRec.Type__c = 'ULIP';
@@ -72,26 +72,12 @@ public class ABSLI_CreateCaseValidations_Test {
         String caseRecord = JSON.serialize(caseRecordMap);
         String request = JSON.serialize(requestMap);
         ABSLI_CreateCaseValidationsController.GenFundResponseWrapper responseWrapper = new ABSLI_CreateCaseValidationsController.GenFundResponseWrapper();
-        responseWrapper.MORE_MESSAGES_IND = 'DummyValue';
-        responseWrapper.MINIMUM_WITHDRAWAL_AMT = '100.00';
-        responseWrapper.ProcessCode = '00';
-        responseWrapper.POLICY_BILLED_TO_DATE = '2024-11-29';
-        responseWrapper.MINIMUM_LOAN_AMT = '500.00';
-        responseWrapper.CSV_PAYABLE_HOLD_AMOUNT = '200.00';
-        responseWrapper.POLICY_BILL_MODE = 'Monthly';
-        responseWrapper.FUND_DETAILS = 'DummyDetails';
-        responseWrapper.WITHDRAWL_AMOUNT_AVAILABLE = '300.00';
-        responseWrapper.navdate = '2022-01-01';
-        responseWrapper.MESSAGES_T = 'DummyMessageT';
-        responseWrapper.LOAN_AMOUNT_AVAILED = '400.00';
-        responseWrapper.MESSAGES = 'DummyMessage';
-        responseWrapper.MESSAGES_T_3 = 'DummyMessageT3';
-        responseWrapper.MESSAGES_T_2 = 'DummyMessageT2';
-        responseWrapper.ProcessMessage = 'Success';
-        responseWrapper.MESSAGES_T_1 = 'DummyMessageT1';
-        responseWrapper.CASH_SURRENDER_VALUE = '500.00';
-        responseWrapper.MAX_LOAD_AMOUNT_AVAILABLE = '1000.00';
-        responseWrapper.POLICY_SA = '200000.00';
+        responseWrapper.BFID_RESPONSE.MINIMUM_WITHDRAWAL_AMT = '100.00';
+        responseWrapper.BFID_RESPONSE.ProcessCode = '00';
+        responseWrapper.BFID_RESPONSE.MINIMUM_LOAN_AMT = '500.00';
+        responseWrapper.BFID_RESPONSE.WITHDRAWL_AMOUNT_AVAILABLE = '300.00';
+        responseWrapper.BFID_RESPONSE.CASH_SURRENDER_VALUE = '500.00';
+        responseWrapper.BFID_RESPONSE.MAX_LOAD_AMOUNT_AVAILABLE = '1000.00';
         String jsonResponse = JSON.serialize(responseWrapper);
         Map<String, String> successResponseMap = new Map<String, String>();
         successResponseMap.put(request,jsonResponse);
