--- a/force-app/main/default/classes/ABSLI_CreateCaseValidationsController.cls
+++ b/force-app/main/default/classes/ABSLI_CreateCaseValidationsController.cls
@@ -150,20 +150,42 @@ public without sharing class ABSLI_CreateCaseValidationsController {
                		GenFundResponseWrapper responseWrapper = (GenFundResponseWrapper)JSON.deserialize(genFundResponse.responseBody,GenFundResponseWrapper.class);
                     if(responseWrapper.ProcessCode=='00'){
                         ABSLI_Case_Detail__c caseExt = new ABSLI_Case_Detail__c(Id=String.valueOf(jsonMap.get('ABSLI_Case_Detail__c')));
-                        if(Decimal.valueOf(responseWrapper.MAX_LOAD_AMOUNT_AVAILABLE)>0 || !String.isBlank(responseWrapper.MAX_LOAD_AMOUNT_AVAILABLE)){
-                            caseExt.Max_Loan_Amount__c = Decimal.valueOf(responseWrapper.MAX_LOAD_AMOUNT_AVAILABLE);
-                        }else{
-                            return 'Maximum loan amount not specified.';
+                        if(String.valueOf(jsonMap.get('CCC_External_Id__c'))=='PCPT033'){
+                         	if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.MAX_LOAD_AMOUNT_AVAILABLE)>0 && !String.isBlank(responseWrapper.BFID_RESPONSE.MAX_LOAD_AMOUNT_AVAILABLE)){
+                                caseExt.Max_Loan_Amount__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.MAX_LOAD_AMOUNT_AVAILABLE);
+                            }else{
+                                return 'Maximum loan amount should be more than 0.';
+                            }
+                            if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.MINIMUM_LOAN_AMT)>0 && !String.isBlank(responseWrapper.BFID_RESPONSE.MINIMUM_LOAN_AMT)){
+                                caseExt.Min_Loan_Amount__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.MINIMUM_LOAN_AMT);    
+                            }else{
+                                caseExt.Min_Loan_Amount__c = Decimal.valueOf(Label.ABSLI_Min_Loan_Amount);
+                            }   
+                        }else if(String.valueOf(jsonMap.get('CCC_External_Id__c'))=='PPAY008' || String.valueOf(jsonMap.get('CCC_External_Id__c'))=='PFTT011'){
+                           	if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.MINIMUM_WITHDRAWAL_AMT)>0 && !String.isBlank(responseWrapper.BFID_RESPONSE.MINIMUM_WITHDRAWAL_AMT)){
+                                caseExt.Minimum_Withdrawal_Amount__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.MINIMUM_WITHDRAWAL_AMT);
+                            }
+                            if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.WITHDRAWL_AMOUNT_AVAILABLE)>0 && !String.isBlank(responseWrapper.BFID_RESPONSE.WITHDRAWL_AMOUNT_AVAILABLE)){
+                                caseExt.Withdrawal_Amount_Available__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.WITHDRAWL_AMOUNT_AVAILABLE);    
+                            }else{
+                                return 'Withdrawal amount available should be more than 0.';
+                            } 
+                        }else if(String.valueOf(jsonMap.get('CCC_External_Id__c'))=='PPAY001' || String.valueOf(jsonMap.get('CCC_External_Id__c'))=='PFTT010'){
+                            if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.CASH_SURRENDER_VALUE)>0 && !String.isBlank(responseWrapper.BFID_RESPONSE.CASH_SURRENDER_VALUE)){
+                                caseExt.Cash_Surrender_Value__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.CASH_SURRENDER_VALUE);
+                            }else{
+                                return 'Case Surrender Value should be more than 0.';
+                            }
                         }
-                        if(Decimal.valueOf(responseWrapper.MINIMUM_LOAN_AMT)>0 || !String.isBlank(responseWrapper.MINIMUM_LOAN_AMT)){
-                        	caseExt.Min_Loan_Amount__c = Decimal.valueOf(responseWrapper.MINIMUM_LOAN_AMT);    
-                        }else{
-                            caseExt.Min_Loan_Amount__c = Decimal.valueOf(Label.ABSLI_Min_Loan_Amount);
+                        else if(String.valueOf(jsonMap.get('CCC_External_Id__c'))=='NNOP004'){
+                            if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.MAX_LOAD_AMOUNT_AVAILABLE)<=5000 || String.isBlank(responseWrapper.BFID_RESPONSE.MAX_LOAD_AMOUNT_AVAILABLE)){
+                                return 'Maximum loan amount should be more than 5000.';
+                            }
                         }
                         update caseExt;
                     	return 'Success';    
                     }else{
-            			return 'Policy is not eligible for loan payout.';         	   
+            			return 'Policy is not eligible.';         	   
                     }
                 }
             }
@@ -187,7 +209,7 @@ public without sharing class ABSLI_CreateCaseValidationsController {
                 if((!ABSLI_Constants.NOMINEE_UPDATE_POLICY_IDENTIFICATION_VALIDATION.contains(policy.Policy_Identification__c))){
                     return 'Success';
                 }else{
-                    return 'Policy is not eligible for nominee update.';
+                    return 'Policy is not eligible.';
                 }
             }
             return 'User is not eligible';
@@ -213,7 +235,7 @@ public without sharing class ABSLI_CreateCaseValidationsController {
                 if(Date.Today() >= oneYearAfterIssueDate){
                     return 'Success';
                 }else{
-                    return 'Policy is not eligible for Duplicate Policy printing.';
+                    return 'Policy is not eligible.';
                 }
             }
             return 'User is not eligible';
@@ -301,7 +323,7 @@ public without sharing class ABSLI_CreateCaseValidationsController {
                 if(policy.Type__c=='ULIP'){
                     return 'Success';
                 }else{
-                    return 'Policy is not eligible for Change In Investor Profile';
+                    return 'Policy is not eligible.';
                 }
             }
             return 'User is not eligible';
@@ -324,7 +346,7 @@ public without sharing class ABSLI_CreateCaseValidationsController {
                 if(policy.Type__c!='ULIP'){
                     return 'Success';
                 }else{
-                    return 'Policy is not eligible for Interest Waiver for HO Users';
+                    return 'Policy is not eligible.';
                 }
             }
             return 'User is not eligible';
@@ -347,7 +369,7 @@ public without sharing class ABSLI_CreateCaseValidationsController {
                 if(policy.Type__c=='ULIP' && Decimal.valueOf(policy.Payment_Term__c)>5){
                     return 'Success';
                 }else{
-                    return 'Policy is not eligible for Reinstatement';
+                    return 'Policy is not eligible.';
                 }
             }
             return 'User is not eligible';
@@ -413,26 +435,19 @@ public without sharing class ABSLI_CreateCaseValidationsController {
     }
     
     public class GenFundResponseWrapper{
-        public String MORE_MESSAGES_IND { get; set; }
-        public String MINIMUM_WITHDRAWAL_AMT { get; set; }
-        public String ProcessCode { get; set; }
-        public String POLICY_BILLED_TO_DATE { get; set; }
-        public String MINIMUM_LOAN_AMT { get; set; }
-        public String CSV_PAYABLE_HOLD_AMOUNT { get; set; }
-        public String POLICY_BILL_MODE { get; set; }
-        public String FUND_DETAILS { get; set; }
-        public String WITHDRAWL_AMOUNT_AVAILABLE { get; set; }
-        public String navdate { get; set; }
-        public String MESSAGES_T { get; set; }
-        public String LOAN_AMOUNT_AVAILED { get; set; }
-        public String MESSAGES { get; set; }
-        public String MESSAGES_T_3 { get; set; }
-        public String MESSAGES_T_2 { get; set; }
-        public String ProcessMessage { get; set; }
-        public String MESSAGES_T_1 { get; set; }
-        public String CASH_SURRENDER_VALUE { get; set; }
-        public String MAX_LOAD_AMOUNT_AVAILABLE { get; set; }
-        public String POLICY_SA { get; set; }
+        public BfidResponse BFID_RESPONSE{get;set;}
+        public GenFundResponseWrapper() {
+            BFID_RESPONSE = new BfidResponse();
+        }
+    }
+    
+    public class BfidResponse{
+        public String MINIMUM_WITHDRAWAL_AMT{get;set;}
+        public String ProcessCode{get;set;}
+        public String MINIMUM_LOAN_AMT{get;set;}
+        public String WITHDRAWL_AMOUNT_AVAILABLE{get;set;}
+        public String CASH_SURRENDER_VALUE{get;set;}
+        public String MAX_LOAD_AMOUNT_AVAILABLE{get;set;}
     }
 
 }
