--- a/force-app/main/default/classes/ASF_BulkCsvController_Test.cls
+++ b/force-app/main/default/classes/ASF_BulkCsvController_Test.cls
@@ -34,8 +34,8 @@ public class ASF_BulkCsvController_Test {
     private static void generateCSVFileWithDataTest() {
         Test.startTest();
         Id caseId = [select Id from case LIMIT 1].Id;
-         	// Object result = ASF_BulkCsvController.generateCSVFileWithData('ABHFL_Create_Case','test',caseId,'Recent');
-        	// Assert.isNotNull(result);
+         	Object result = ASF_BulkCsvController.generateCSVFileWithData('ABHFL_Create_Case','test',caseId,'__Recent');
+        	Assert.isNotNull(result);
         Test.stopTest();     
     }
     @isTest
