IGMS File Size Check

--- a/force-app/main/default/classes/ABSLI_UploadIGMSComplaintsIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_UploadIGMSComplaintsIntegration.cls
@@ -14,7 +14,7 @@ public with sharing class ABSLI_UploadIGMSComplaintsIntegration {
             for(ContentDocumentLink conLink : contentLinks){
                  contentDocumentIds.add(conLink.ContentDocumentId);
             }
-            List<ContentVersion> contentVersion = [Select Id, ContentDocumentId, Title,FileExtension,PathonClient
+            List<ContentVersion> contentVersion = [Select Id, ContentDocumentId, Title,FileExtension,PathonClient,ContentSize
                                                     from ContentVersion where ContentDocumentId in: contentDocumentIds];
 
             List<ABSLI_IGMS_Document__c> igmsDocuments = [Select id,ContentDocumentId__c,Status__c
@@ -28,7 +28,8 @@ public with sharing class ABSLI_UploadIGMSComplaintsIntegration {
             }
             
             for(ContentVersion content : contentVersion){
-                if(allowedFileTypeForIGMS.contains(content.FileExtension)){
+                integer fileSize = content.contentSize/1024/1024;
+                if(allowedFileTypeForIGMS.contains(content.FileExtension) && fileSize < ABSLI_Constants.IGMS_MAX_FILE_SIZE){
                 IGMSDocumentWrapper docWrapper = new IGMSDocumentWrapper();
                 docWrapper.fileName = content.Title +'.' + content.FileExtension;
                 docWrapper.contentDocumentId = content.ContentDocumentId;
